# p2pcv-server

./: .editorconfig  .env.vault  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  migrate.Dockerfile  migrations-runner.Dockerfile  package.json  rust-toolchain.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  postgres.Dockerfile
.github/workflows/: aws.yml  docker-image.yml  migrate.yml
.insomnia/ApiSpec/: spc_89e9a545e87c45e183856e01be442c12.yml
.insomnia/Environment/: env_9bd533c5961846bfa6c5fe22ba259382.yml  env_f089b1f00a0c07a7e956d20f18ac35ffe34c1c86.yml
.insomnia/Request/: req_0b29a0e17c484fc3af13eb0049e43048.yml  req_5fece56a36504742a737111f733b7391.yml  req_8a4274975fe84a5089c69db67ae065f1.yml  req_93f4d6f181cd4f4a9fb98a7712455d33.yml  req_aaae8ee9e44946e295f43efbf46f8364.yml  req_cc4167e587eb469286dec67f541582dd.yml  req_debce2075e6346f9a7acdfc70415fac0.yml  req_e18d10f526ed4709bc12c52f5fb9b105.yml  req_fd78a2671843452689bb49e1d83ba4e0.yml
.insomnia/Workspace/: wrk_5bc847a5f8134d76ad33e98dbff49718.yml
deployment/base/migrate/: Dockerfile
deployment/base/migrations-runner/: run.sh
deployment/dev/backend/: task-definition.json
deployment/dev/migrate/: task-definition.json
deployment/dev/task-definitions/: backend.json
deployment/general/migrate/: Dockerfile  run.sh
libs/pvpcv_protobuf/: Cargo.toml  build.rs
libs/pvpcv_protobuf/src/: client_to_server.proto  lib.rs  requests.proto  responses.proto  server_to_client.proto
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-02-06-103033_users/: down.sql  up.sql
migrations/2022-06-16-095715_google/: down.sql  up.sql
migrations/2023-03-14-101254_friend_requests/: down.sql  up.sql
migrations/2023-04-25-173432_list_friends/: down.sql  up.sql
migrations/2023-08-21-205206_lichess_users/: down.sql  up.sql
migrations/2024-03-29-164304_peer_connections/: down.sql  up.sql
redis_commands/: 202404041500.redisCmds
redis_indices/: setup.redis
scripts/: runRedisCommands.js
src/: api.rs  app_error.rs  app_json.rs  app_result.rs  db.rs  error.rs  main.rs  models.rs  user.rs
src/api/: app_error.rs  db_error.rs  error.rs  google.rs  mod.rs  user.rs
src/api/auth/: auth.rs  google.rs  jwt.rs  key_store.rs  mod.rs  payloads.rs  public_key_storage.rs  util.rs
src/api/auth/google/: claims.rs  config.rs  mod.rs  provider.rs
src/api/auth/login/: mod.rs  payloads.rs  provider.rs
src/api/auth/providers/: mod.rs  provider.rs
src/api/auth/providers/google/: claims.rs  mod.rs  provider.rs
src/api/auth/providers/lichess/: claims.rs  config.rs  mod.rs  provider.rs
src/api/auth/session/: auth.rs  claims.rs  config.rs  mod.rs
src/api/games/: game_request.rs  mod.rs
src/api/p2p/: mod.rs
src/api/users/: friend_requests.rs  friends.rs  mod.rs  peer_connections.rs
src/api/websocket/: mod.rs  websocket_server.rs
src/db/: db_conn.rs  extractor.rs  friend_requests.rs  friends.rs  lichess.rs  mod.rs  model.rs  peer_connections.rs  schema.rs  user.rs  users.rs
src/db/extensions/: sql_functions.rs
src/db/schema/: generated.rs  manual.rs  mod.rs
src/redis_db/: extractor.rs  mod.rs  peer_connections.rs
test_db/: test_data.sql  test_dump.sql
tools/p2p_dbg/: Cargo.toml
tools/p2p_dbg/src/: main.rs
tools/websocket_dbg/: Cargo.toml
tools/websocket_dbg/src/: main.rs
