[package]
name = "p2pcv-server"
version = "0.1.2-snapshot"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Relacibo/p2pcv-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.2"
env_logger = "^0.9"
diesel = { version = "^2.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = { version = "^2.0", features = ["postgres"] }
diesel-async = { version = "^0.1", features = ["postgres"] }
r2d2 = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
uuid = { version = "^1.2", features = ["serde", "v4"] }
chrono = { version = "^0.4", features = ["serde"] }
jsonwebtoken = "^8"
reqwest = "^0.11"
dotenv = "^0.15"
base64 = "^0.13"
tokio = { version = "^1.17", features = ["sync"] }
futures = "^0.3"
actix-web-httpauth = "^0.8"
thiserror = "1.0"
serde_with = { version = "2.1.0", features = ["chrono"] }
derive_builder = "0.11.2"

[build-dependencies]
static-files = "^0.2"
