[package]
name = "p2pcv-server"
version = "0.1.2-snapshot"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Relacibo/p2pcv-server"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
env_logger = "^0.10"
diesel = { version = "^2.1", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = { version = "^2.1", features = ["postgres"] }
diesel-async = { version = "^0.3", features = ["postgres", "bb8"] }
bb8 = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
uuid = { version = "^1.2", features = ["serde", "v4"] }
chrono = { version = "^0.4", features = ["serde"] }
jsonwebtoken = "^8"
reqwest = "^0.11"
dotenvy = "^0.15"
base64 = "^0.21"
tokio = { version = "^1.17", features = ["sync"] }
futures = "^0.3"
actix-web-httpauth = "^0.8"
thiserror = "1.0"
serde_with = { version = "3.1.0", features = ["chrono", "base64"] }
derive_builder = "0.12"
log = "0.4.19"
async-trait = "0.1.73"

