[package]
name = "p2pcv-server"
version = "0.1.2-snapshot"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Relacibo/p2pcv-server"

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = ["libs/pvpcv_protobuf", "tools/websocket_dbg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.9"
env_logger = "^0.11.5"
diesel = { version = "^2.2.4", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = { version = "^2.1", features = ["postgres"] }
diesel-async = { version = "^0.5", features = ["postgres", "bb8"] }
bb8 = "^0.8.5"
serde = { version = "^1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
dotenvy = "0.15.7"
base64 = "0.22"
tokio = { version = "1.40.0", features = ["full"] }
actix-web-httpauth = "0.8.2"
thiserror = "1.0.63"
serde_with = { version = "3.9.0", features = ["chrono", "base64"] }
derive_builder = "0.20.1"
log = "0.4.19"
async-trait = "0.1.82"
actix-cors = "0.7.0"
validator = { version = "0.18", features = ["derive"] }
actix-web-validator = "6.0"
sanitizer = "0.1.6"
mime = "0.3.17"
rand = "0.8.5"
prost = "0.13.2"
actix-ws = "0.3.0"
futures = "0.3.30"
dashmap = "6.1.0"
prost-types = "0.13.2"
p2pcv-protobuf = { path = "libs/pvpcv_protobuf" }
