[package]
name = "websocket_dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.19"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
anyhow = "1.0.88"
futures-util = "0.3.30"
p2pcv-protobuf = { path = "../../libs/pvpcv_protobuf" }
uuid = "1.10.0"
dotenvy = "0.15.7"
prost = "0.13.2"
